# MyGameEngine

./: .clang-tidy  .gitignore  CMakeLists.txt  colors.cpp  coordinate_systems.cpp  exercise_1.cpp  main.cpp  moving_around.cpp  shader_lesson.cpp  texture_lesson.cpp  transformations.cpp  vcpkg.json
assets/models/evil_chest/: untitled.mtl
design/: high-level.puml
engine/: Camera.cpp  Camera.h  DirectinoalLight.cpp  DirectinoalLight.h  Materials.cpp  Materials.h  Mesh.cpp  Mesh.h  MeshUtils.cpp  MeshUtils.h  Model.cpp  Model.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h  Window.cpp  Window.h
games/snake/: Food.cpp  Food.h  GameBoard.cpp  GameBoard.h  MeshUtils.cpp  MeshUtils.h  Snake.cpp  Snake.h  SnakeGame.cpp
shaders/: simple_vertex.glsl
shaders/coordinatesystem/: fragment.glsl
shaders/exercise_01/: red_fragment.glsl
shaders/shader_lesson/: fragment_with_color_input.glsl  vertex_with_color.glsl
shaders/snake/food/: fragment.glsl
shaders/snake/gameboard/: fragment.glsl
shaders/stencil/: fragment.glsl  vertex.glsl
shaders/texture_debug_shader/: fragment.glsl  vertex.glsl
shaders/texture_lesson/: fragment_ct.glsl  vertex_ct.glsl
shaders/transformations/: fragment.glsl  vertex.glsl
shaders/tutorial_lighting/direction_lit_cube/: fragment.glsl  vertex.glsl
shaders/tutorial_lighting/gouraud_object/: fragment.glsl  vertex.glsl
shaders/tutorial_lighting/light_cube/: fragment.glsl
shaders/tutorial_lighting/light_map_object/: fragment.glsl  vertex.glsl
shaders/tutorial_lighting/material_object/: fragment.glsl  vertex.glsl
shaders/tutorial_lighting/multiple_light_shader/: fragment.glsl  vertex.glsl
shaders/tutorial_lighting/object/: fragment.glsl  vertex.glsl
tutorials/lighting/: DirectionalLitCube.cpp  DirectionalLitCube.h  GouraudLitCube.cpp  GouraudLitCube.h  LightAttenuation.h  LightCube.cpp  LightCube.h  LightingTutorial.cpp  LightmapCube.cpp  LightmapCube.h  LitCube.cpp  LitCube.h  MaterialCube.cpp  MaterialCube.h  MultipleLiteCube.cpp  MultipleLiteCube.h  PhongLightProperties.cpp  PhongLightProperties.h
tutorials/modelloading/: MultipleLightShaderCube.cpp  MultipleLightShaderCube.h  model_loading_main.cpp
tutorials/stencil/: stencil.cpp
